fluent-syntax/test/fixtures_behavior/section_starts_with_one_bracket.ftl
[ This is a broken section ]]
//~ ERROR E0003, pos 1, args "["
